Task/src/main/kotlin/com/example/assignment/global/error/response/ErrorProperty.kt
package com.example.assignment.global.error.response

interface ErrorProperty {

    val status: Int
    val message: String
}